Update McMullen County Color

--- a/courthouse/Texas-Courthouse-Tours.html
+++ b/courthouse/Texas-Courthouse-Tours.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>January Smith - Photographer/Developer</title>
-        <meta name="description" content="This is the Texas Courthouse Tours page on the personal website of panoramic photographer and application software developer January Smith.">
+        <meta name="description" content="This is the Texas Courthouse Tours page on the personal website of panoramic photographer and application software developer January Smith.  The page contains 360 degree Street View virtual tours of the courthouses in the state of Texas.">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="icon" href="../img/home/favicon.ico">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
