--- a/index.html
+++ b/index.html
@@ -15,61 +15,75 @@
     </head>
     <body>
 <!-- ===============================
-		Navagation
-	 =============================== -->       	
-	 <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-top navbar-expanded">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand page-scroll" href="#">
-                        January Smith
-                    </a>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="hidden">
-                            <a href="#"></a>
+        Navagation
+    =============================== -->        
+         <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-bottom navbar-expanded">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand page-scroll" href="#">
+                            Home
+                        </a>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="hidden">
+                                <a href="#"></a>
+                            </li>
+                        <li class="dropdown">
+                            <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
+                            <ul class="dropdown-menu">
+                                <!-- <li><a href="blog/blog.html">Pic of the Day</a></li> -->
+                                <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
+                                <li><a href="courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
+                            </ul>
                         </li>
-                    <li class="dropdown">
-                        <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="blog/blog.html">Pic of the Day</a></li>
-                            <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
-                            <li><a href="courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
+                             <li>
+                                <a href="about/about.html">About</a>
+                            </li>
                         </ul>
-                    </li>
-                         <li>
-                            <a href="about/about.html">About</a>
-                        </li>
-                    </ul>
+                    </div>
+                    <!-- /.navbar-collapse -->
                 </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
-        </nav>
-
+                <!-- /.container -->
+            </nav>            
 <!-- ===============================
-		Header
+		Content
 	 =============================== -->
-        <header id="home" class="fill">
-            <div id="mypanoviewer"  >
-                
+        <article class="container">
+
+        <div id="mainRow" class="row">
+
+            <div id="title" class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+            <h1>January Smith</h1>
+            <hr>
+            <h4>Photographer</h4>
+            <h4>Developer</h4>
             </div>
-        </header>
+            <div id="myPanoViewer" class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
+
+            </div>
+
+        </div>              
+
+
+
+
+        </article>
 <!-- ===============================
         Scripts
      =============================== -->
         <script src="js/vendor/jquery-1.12.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/home.js"></script>
+        <script src="js/main.js"></script>
         <script type="text/javascript">
         // create a new viewer object:
         var viewer=new PANOViewer();
@@ -79,7 +93,7 @@
         viewer.setVars({
           pano: "img/home/sanJosePano_",
           format: "14faces",
-          pan: 120,
+          pan: 180,
           minpan: -180,
           maxpan: 180,
           tilt:0,
@@ -94,7 +108,7 @@
           enablegyroscope: 0
         });
 
-        viewer.embed("mypanoviewer");
+        viewer.embed("myPanoViewer");
 
         </script>
         <!-- Google Analytics: -->
