--- a/stock/stock.html
+++ b/stock/stock.html
@@ -4,19 +4,20 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>January Smith - Photographer/Developer</title>
-        <meta name="description" content="This is the blog on the personal website of panoramic photographer and application software developer January Smith.">
+        <meta name="description" content="This is the personal website of panoramic photographer and application software developer January Smith.">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="icon" href="../img/home/favicon.ico">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/main.css">     
+        <link rel="stylesheet" href="../css/main.css">
+       
     </head>
     <body>
 <!-- ===============================
         Navagation
      =============================== -->        
-     <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-top navbar-expanded">
-        <div class="container-fluid">
+     <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-bottom navbar-expanded">
+        <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -26,7 +27,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="../index.html">
-                    January Smith
+                    Home
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,13 +39,14 @@
                     <li class="dropdown">
                         <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
                         <ul class="dropdown-menu">
-          					<li><a href="#">Pic of the Day</a></li>
+                            <li><a href="../blog/blog.html">Pic of the Day</a></li>
                             <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
                             <li><a href="../courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
-          				</ul>
+                        </ul>
                     </li>
+
                      <li>
-                        <a href="../about/about.html">About</a>
+                        <a href="#">About</a>
                     </li>
                 </ul>
             </div>
@@ -53,22 +55,16 @@
         <!-- /.container -->
     </nav>
 <!-- ===============================
-        Picture of the Day
-     =============================== -->   
-    <article>
-        <section id="podSection">
-            <div id="podList" class="container-fluid">
+        Content
+     =============================== -->        
+    <article id="stockPhotos" class="container">
 
-			</div>
-        </section>
+ 		<iframe id="iStock" src="http://www.istockphoto.com/portfolio/01smith"></iframe>
+
     </article>
- <!-- ===============================
-        Scripts
-     =============================== -->           
     <script src="../js/vendor/jquery-1.12.1.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/vendor/bootstrap.min.js"></script>
-    <script src="../js/blog.js"></script>
 <!-- Google Analytics: -->
     <script>
         (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
