Improve Responsive Design

--- a/about/about.html
+++ b/about/about.html
@@ -61,26 +61,26 @@
 
  		<div id="mainRow" class="row">
 
-            <div id="title" class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+            <div id="title" class="hidden-xs col-sm-3 col-md-3 col-lg-3">
 	            <h1>January Smith</h1>
 	            <hr>
 	            <h4>Photographer</h4>
 	            <h4>Developer</h4>
             </div>
-            <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
+            <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
 				<div class="col-sm-4 col-md-4 col-lg-4">
                 	<img src="../img/about/me.jpg" alt="Head Shot picture of January Smith" class="center-block img-responsive img-rounded">  
             	</div>
-            	<div class="col-sm-8 col-md-8 col-lg-8">
+            	<div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
             	
                 <p >I am a panoramic photographer and application software developer based in my home town of San Antonio, Texas.</p>
                 <p >I started my career over 30 years ago writing COBOL programs using punched cards on a Sperry Univac 90/30. Since then I have written a variety of applications across different hardware and software platforms up to Javascript/CSS/HTML and the mobile web applications of today.  A couple of years ago I took up photography and have been shooting high quality stock and panoramic images around the world.  I enjoy the challenge of composing an image in a full 360 degrees and the interactive results that can be shared online.</p>
                 
                 <p >Give me a call, send me an email, or use the contact form below to get in touch...</p>
-
-	                <h5 >January Smith<br>
-	                11942 Mission Trace<br>
-	                San Antonio, Tx 78230</h5>
+                    <h3 class="visible-xs">January Smith</h3>
+	                <p class="hidden-xs">January Smith</p>
+                    <p>11942 Mission Trace<br>
+	                San Antonio, Tx 78230</p>
 	                <p >
 	                    <i class="fa fa-fw fa-lg fa-phone"></i>(210) 870-6991</p>
 	                <p >
