--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
             <div id="title" class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
             <h1>January Smith</h1>
             <hr>
-            <h4>Photographer</h4>
-            <h4>Developer</h4>
+                <!-- switch to smaller h5 on phones -->
+                <div class="hidden-xs">
+                    <h4>Photographer</h4>
+                    <h4>Developer</h4>
+                </div>
+                 <div class="hidden-sm hidden-md hidden-lg">
+                    <h5>Photographer</h5>
+                    <h5>Developer</h5>
+                </div>           
             </div>
             <div id="myPanoViewer" class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
 
