--- a/about/about.html
+++ b/about/about.html
@@ -39,7 +39,7 @@
                     <li class="dropdown">
                         <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
                         <ul class="dropdown-menu">
-                            <!-- <li><a href="../blog/blog.html">Pic of the Day</a></li> -->
+                            <li><a href="../blog/blog.html">Pic of the Day</a></li>
                             <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
                             <li><a href="../courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
                         </ul>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
 				<div class="col-sm-4 col-md-4 col-lg-4">
-                	<img src="../img/about/me.jpg" alt="Head Shot picture of January Smith" class="center-block img-responsive img-rounded">  
+                	<img id="aboutImg" src="../img/about/me.jpg" alt="Head Shot picture of January Smith" class="center-block img-responsive img-rounded">  
             	</div>
             	<div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
             	
