--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li class="dropdown">
                             <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
                             <ul class="dropdown-menu">
-                                <!-- <li><a href="blog/blog.html">Pic of the Day</a></li> -->
+                                <li><a href="blog/blog.html">Pic of the Day</a></li>
                                 <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
                                 <li><a href="courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
                             </ul>
