Update Courthouse JS

--- a/courthouse/Texas-Courthouse-Tours.html
+++ b/courthouse/Texas-Courthouse-Tours.html
@@ -67,7 +67,7 @@
     <script src="../js/vendor/jquery-1.12.1.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/vendor/bootstrap.min.js"></script>
-     <script src="../js/main.js"></script>
+    <script src="../js/courthouse.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?callback=initMap&amp;key=AIzaSyA3h96Za7Gnx6cCCYZq9qNDZEdpN_jqX-Y"></script>
 <!-- Google Analytics: -->
     <script>
