Add Panorama Page to Website

--- a/about/about.html
+++ b/about/about.html
@@ -39,6 +39,7 @@
                     <li class="dropdown">
                         <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
                         <ul class="dropdown-menu">
+                            <li><a href="../pano/pano.html">Panoramas</a></li>
                             <li><a href="../blog/blog.html">Pic of the Day</a></li>
                             <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
                             <li><a href="../courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
