--- a/pano/pano.html
+++ b/pano/pano.html
@@ -83,167 +83,10 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Panoramas</h4>
       </div>
+      <!-- <li> items populated in pano.js from panoArray -->
       <div class="modal-body">
-        <ul class="list-unstyled">
-        <li>
-          <a href="#" onclick="setPano('FJ2zWEuz4QoAAAQYaKhd7A');">Advanced Smile Care</a>
-        </li>
-        <li>
-          <a href="#" onclick="setPano('0kMPde70qqwAAAGuvY_iuw');">Aladdin Carpets</a>
-        </li>
-        <li>
-          <a href="#" onclick="setPano('3LESd3zuvjQAAAQn71PiPA');">Alamo City Liquor(Bitters)</a>
-        </li>
-        <li>
-          <a href="#" onclick="setPano('xayNqk0grVIAAAQn71PkLQ');">Alamo City Liquor(Stone Oak)</a>
-        </li>
-        <li>
-          <a href="#">Alamo City Liquor(Thousand Oaks)</a>
-        </li>
-        <li>
-          <a href="#">Alamo Heights Pet Clinic</a>
-        </li>
-        <li>
-          <a href="#">Alamo Karts</a>
-        </li>
-        <li>
-          <a href="#">Anytime Fitness (Copperas Cove)</a>
-        </li>
-        <li>
-          <a href="#">Anytime Fitness (CityBase)</a>
-        </li>
-        <li>
-          <a href="#">Anytime Fitness (Kerrville)</a>
-        </li>
-        <li>
-          <a href="#">Anytime Fitness (Medical Center)</a>
-        </li>
-        <li>
-          <a href="#">Anytime Fitness (Victoria)</a>
-        </li>
-        <li>
-          <a href="#">Augustine Law Office</a>
-        </li>
-        <li>
-          <a href="#">Aziz Rugs</a>
-        </li>
-        <li>
-          <a href="#">Bec Dental Center</a>
-        </li>
-        <li>
-          <a href="#">Boba Sip</a>
-        </li>
-        <li>
-          <a href="#">Buddys Home Furnishings</a>
-        </li>
-        <li>
-          <a href="#">Dr Robert Heinrich DDS</a>
-        </li>
-        <li>
-          <a href="#">Eraser Clinic Tattoo Removal</a>
-        </li>
-        <li>
-          <a href="#">ExploreUSA</a>
-        </li>
-        <li>
-          <a href="#">Frio Country Resort</a>
-        </li>
-        <li>
-          <a href="#">Futon Furniture Store</a>
-        </li>
-        <li>
-          <a href="#">Gems of the Hill Country</a>
-        </li>
-        <li>
-          <a href="#">Greg Liquors</a>
-        </li>
-        <li>
-          <a href="#">Heavenly Floral Designs</a>
-        </li>
-        <li>
-          <a href="#">Irish Embassy Pub</a>
-        </li>
-        <li>
-          <a href="#">Law Offices Jesus Lopez</a>
-        </li>
-        <li>
-          <a href="#">Museum of Western Art</a>
-        </li>
-        <li>
-          <a href="#">Mustang Inn</a>
-        </li>
-        <li>
-          <a href="#">Oriental Rug Gallery of Texas</a>
-        </li>
-        <li>
-          <a href="#">Owens Liquor</a>
-        </li>
-        <li>
-          <a href="#">Re-Bath(Bandera)</a>
-        </li>
-        <li>
-          <a href="#">Re-Bath(Schertz)</a>
-        </li>
-        <li>
-          <a href="#">Rustic Gallery</a>
-        </li>
-        <li>
-          <a href="#">Sew Special</a>
-        </li>
-        <li>
-          <a href="#">Southpoint Auto</a>
-        </li>
-        <li>
-          <a href="#">Stone Oak Orthodontics</a>
-        </li>
-        <li>
-          <a href="#">Thanks for Vaping(Blanco)</a>
-        </li>
-        <li>
-          <a href="#">Thanks for Vaping(IH35)</a>
-        </li>
-        <li>
-          <a href="#">Thanks for Vaping(San Pedro)</a>
-        </li>
-        <li>
-          <a href="#">The French Connection</a>
-        </li>
-        <li>
-          <a href="#">Thrifty Liquor(Huebner)</a>
-        </li>
-        <li>
-          <a href="#">Thrifty Liquor(IH10)</a>
-        </li>
-        <li>
-          <a href="#">Trinity Baptist Church</a>
-        </li>
-        <li>
-          <a href="#">Two Shots Liquor</a>
-        </li>
-        <li>
-          <a href="#">Urban Mattress</a>
-        </li>
-        <li>
-          <a href="#">VK Orthodontics</a>
-        </li>
-        <li>
-          <a href="#">The Vapor Room</a>
-        </li>
-        <li>
-          <a href="#">Wilson Family Chiropractic</a>
-        </li>
-        <li>
-          <a href="#">Winters Gallery</a>
-        </li>
-        <li>
-          <a href="#">W Dental</a>
-        </li>
-        <li>
-          <a href="#">Xpressions Florist</a>
-        </li>
-        <li>
-          <a href="#">Yummiberry Yogurt</a>
-        </li>
+        <ul id="panoList" class="list-unstyled">
+
       </ul>
       </div>
       <div class="modal-footer">
