--- a/art/art.html
+++ b/art/art.html
@@ -5,7 +5,7 @@
     <title>Chromata distribution file test page</title>
 </head>
 <body>
-<img src="http://januarysmith.com/img/about/me.jpg" />
+<img src="../img/alamo.jpg" />
 <script src="../js/art.js" type="text/javascript"></script>
 <script type="text/javascript">
     var image = document.querySelector('img');
@@ -17,7 +17,7 @@
             lineWidth: 6,
             lineMode: 'smooth',
             origin: ['bottom'],
-            outputSize: 'original',
+            outputSize: '',
             pathFinderCount: 50,
             speed: 7,
             turningAngle: Math.PI
