update art file location alamo.jpg

--- a/art/art.html
+++ b/art/art.html
@@ -5,7 +5,7 @@
     <title>Chromata distribution file test page</title>
 </head>
 <body>
-<img src="../img/alamo.jpg" />
+<img src="../img/art/alamo.jpg" />
 <script src="../js/art.js" type="text/javascript"></script>
 <script type="text/javascript">
     var image = document.querySelector('img');
