--- a/art/art.html
+++ b/art/art.html
@@ -31,6 +31,8 @@
     document.body.addEventListener('click', function() {
         chromata.toggle();
     })
+    // autostart
+    chromata.toggle();
 </script>
 </body>
 </html>
