--- a/art/art.html
+++ b/art/art.html
@@ -1,19 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Chromata distribution file test page</title>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>January Smith - Photographer/Developer</title>
+        <meta name="description" content="This is the personal website of panoramic photographer and application software developer January Smith.">
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <link rel="icon" href="../img/home/favicon.ico">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
+       
+    </head>
+    <body>
+<!-- ===============================
+        Navagation
+     =============================== -->        
+     <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-bottom navbar-expanded">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="../index.html">
+                    Home
+                </a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#home"></a>
+                    </li>
+                    <li class="dropdown">
+                        <a  class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="../pano/pano.html">Panoramas</a></li>
+                            <li><a href="../blog/blog.html">Pic of the Day</a></li> 
+                            <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
+                            <li><a href="../courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
+                        </ul>
+                    </li>
 
-<div>
-<img src="../img/art/alamo.jpg" />
-</div>
-
-
-<script src="../js/art.js" type="text/javascript"></script>
-
-<script type="text/javascript">
+                     <li>
+                        <a href="../about/about.html">About</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+<!-- ===============================
+        Picture of the Day
+     =============================== -->   
+    <article id="art" class="container">
+        <div id="mainRow" class="row">
+            <div>
+                <img src="../img/art/alamo.jpg" />
+            </div>
+        </div>
+    </article>
+ <!-- ===============================
+        Scripts
+     =============================== -->           
+    <script src="../js/vendor/jquery-1.12.1.min.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/vendor/bootstrap.min.js"></script>
+    <script src="../js/art.js" type="text/javascript"></script>
+    <script type="text/javascript">
     var image = document.querySelector('img');
     chromata = new Chromata(image, {
             colorMode: 'color',
@@ -33,6 +92,15 @@
     })
     // autostart
     chromata.toggle();
-</script>
-</body>
+    </script>
+    
+<!-- Google Analytics: -->
+    <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='https://www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-48280446-1','auto');ga('send','pageview');
+    </script>
 </html>
