--- a/art/art.html
+++ b/art/art.html
@@ -58,12 +58,10 @@
 <!-- ===============================
         Picture of the Day
      =============================== -->   
-    <article id="art" class="container">
-        <div id="mainRow" class="row">
-            <div>
-                <img src="../img/art/alamo.jpg" />
-            </div>
-        </div>
+    <article class="container">
+    
+        <img id="myArt" src="../img/art/alamo.jpg" />
+            
     </article>
  <!-- ===============================
         Scripts
