--- a/art/art.html
+++ b/art/art.html
@@ -59,9 +59,11 @@
         Picture of the Day
      =============================== -->   
     <article class="container">
-    
-        <img id="myArt" src="../img/art/alamo.jpg" />
-            
+        <div class="col-md-2"></div>
+        <div class="col-md-10">
+            <img id="myArt" src="../img/art/alamo.jpg" />
+        </div>
+        <div class="col-md-2"></div>  
     </article>
  <!-- ===============================
         Scripts
