calc art output size

--- a/art/art.html
+++ b/art/art.html
@@ -82,7 +82,7 @@
             lineWidth: 6,
             lineMode: 'smooth',
             origin: ['bottom'],
-            outputSize: 'original',
+            outputSize: '',
             pathFinderCount: 50,
             speed: 7,
             turningAngle: Math.PI
