add artContainer ID

--- a/art/art.html
+++ b/art/art.html
@@ -58,7 +58,7 @@
 <!-- ===============================
         Picture of the Day
      =============================== -->   
-    <article class="container">
+    <article id="artContainer" class="container">
         <div class="col-md-1"></div>
         <div class="col-md-10">
             <img id="myArt" src="../img/art/alamo.jpg" />
