add a blank row

--- a/art/art.html
+++ b/art/art.html
@@ -59,11 +59,15 @@
         Picture of the Day
      =============================== -->   
     <article id="artContainer" class="container">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-            <img id="myArt" src="../img/art/alamo.jpg" />
+        <div class="row">
         </div>
-        <div class="col-md-1"></div>  
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <img id="myArt" src="../img/art/alamo.jpg" />
+            </div>
+            <div class="col-md-1"></div>  
+        </div>
     </article>
  <!-- ===============================
         Scripts
