--- a/art/art.html
+++ b/art/art.html
@@ -78,7 +78,7 @@
     <script src="../js/art.js" type="text/javascript"></script>
     <script type="text/javascript">
     var image = document.querySelector('img');
-    chromata = new Chromata(image, {
+    imageTracer = new ImageTracer(image, {
             colorMode: 'color',
             compositeOperation: 'lighten',
             iterationLimit: 0,
@@ -92,10 +92,10 @@
             turningAngle: Math.PI
     });
     document.body.addEventListener('click', function() {
-        chromata.toggle();
+        imageTracer.toggle();
     })
     // autostart
-    chromata.toggle();
+    imageTracer.toggle();
     </script>
     
 <!-- Google Analytics: -->
