--- a/art/art.html
+++ b/art/art.html
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-                <img id="myArt" src="../img/art/alamo.jpg" />
+                <img id="myArt" class="img-responsive" src="../img/art/alamo.jpg" />
             </div>
             <div class="col-md-1"></div>  
         </div>
