blank out src in html image

--- a/art/art.html
+++ b/art/art.html
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-                <img id="myArt" class="img-responsive" src="../img/art/alamo.jpg" />
+                <img id="myArt" class="img-responsive" src="" />
             </div>
             <div class="col-md-1"></div>  
         </div>
