--- a/art/art.html
+++ b/art/art.html
@@ -102,8 +102,8 @@
         document.body.addEventListener('click', function() {
             imageTracer.toggle();
         })
-        // autostart
-        imageTracer.toggle();
+        // autostart in 3 seconds
+        setTimeout(imageTracer.toggle, 3000);
     </script>
     
 <!-- Google Analytics: -->
