--- a/art/art.html
+++ b/art/art.html
@@ -103,7 +103,7 @@
             imageTracer.toggle();
         })
         // autostart in 3 seconds
-        setTimeout(imageTracer.toggle, 3000);
+        setTimeout(imageTracer.toggle(), 3000);
     </script>
     
 <!-- Google Analytics: -->
