--- a/art/art.html
+++ b/art/art.html
@@ -103,7 +103,7 @@
             imageTracer.toggle();
         })
         // autostart in 10 seconds
-        setTimeout(imageTracer.toggle(), 10000);
+        //setTimeout(imageTracer.toggle(), 10000);
     </script>
     
 <!-- Google Analytics: -->
