--- a/art/art.html
+++ b/art/art.html
@@ -102,8 +102,8 @@
         document.body.addEventListener('click', function() {
             imageTracer.toggle();
         })
-        // autostart in 10 seconds
-        //setTimeout(imageTracer.toggle(), 10000);
+        // autostart in 3 seconds
+        setTimeout(imageTracer.toggle, 3000);
     </script>
     
 <!-- Google Analytics: -->
