move logic out of HTML to JS file

--- a/art/art.html
+++ b/art/art.html
@@ -77,7 +77,7 @@
     <script src="../js/plugins.js"></script>
     <script src="../js/vendor/bootstrap.min.js"></script>
     <script src="../js/art.js" type="text/javascript"></script>
-    <script type="text/javascript">
+<!--<script type="text/javascript">
         var randomImage = ["../img/art/alamo.jpg",
         "../img/art/mission.jpg",
         "../img/art/stock.jpg",
@@ -103,8 +103,8 @@
             imageTracer.toggle();
         })
         // autostart in 3 seconds
-        setTimeout(imageTracer.start, 3000);
-    </script>
+        setTimeout(imageTracer.toggle., 3000);
+    </script> -->
     
 <!-- Google Analytics: -->
     <script>
