--- a/dojo/dojo1.html
+++ b/dojo/dojo1.html
@@ -1,2 +1,4 @@
-<h1>My First Javascript</h1>
-<button type="button">Click Me</button>
+<html>
+	<h1>My First Javascript</h1>
+	<button type="button">Click Me</button>
+</html>
