--- a/dojo/dojo2.html
+++ b/dojo/dojo2.html
@@ -1,2 +1,8 @@
+<html>
+<head>
+</head>
+<body>
 <h1>My First Javascript</h1>
 <button type="button" onclick="alert('hello world');">Click Me</button>
+</body>
+</html>
