--- a/dojo/dojo3.html
+++ b/dojo/dojo3.html
@@ -1,9 +1,9 @@
-<canvas id="myCanvas"></canvas>
-
-<script type="application/javascript">
-	var ctx = document.getElementById("myCanvas").getContext("2d");
-
-	ctx.fillStyle = "rgb(255,0,0)";
-	ctx.fillRect (10, 10, 75, 50);
-
-</script>
+<html>
+<head>
+</head>
+<body>
+<h1>My First Javascript</h1>
+<button type="button" >Click Me</button>
+</body>
+<script>alert("hello world");</script>
+</html>
