--- a/dojo/dojo5.html
+++ b/dojo/dojo5.html
@@ -6,14 +6,10 @@
 			var ctx = document.getElementById("myCanvas").getContext("2d");
 
 		    ctx.beginPath();
-		    ctx.arc(75,75,50,0,Math.PI*2,true); // Outer circle
-		    ctx.moveTo(110,75);
-		    ctx.arc(75,75,35,0,Math.PI,false);  // Mouth (clockwise)
-		    ctx.moveTo(65,65);
-		    ctx.arc(60,65,5,0,Math.PI*2,true);  // Left eye
-		    ctx.moveTo(95,65);
-		    ctx.arc(90,65,5,0,Math.PI*2,true);  // Right eye
-		    ctx.stroke();
+		    ctx.moveTo(75,50);
+		    ctx.lineTo(100,75);
+		    ctx.lineTo(100,25);
+		    ctx.fill();
 
 		</script>
 	</body>
