--- a/house/house1.html
+++ b/house/house1.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
     <head>
-
+      <link rel="stylesheet" href="../css/main.css">
     </head>
-    <body>
+    <body >
 
-        <div id="myPanoViewer">
+        <div id="myPanoViewer" >
 
         </div>
            
