--- a/house/house1.html
+++ b/house/house1.html
@@ -1,26 +1,20 @@
 <!doctype html>
 <html>
 <head>
-        <link rel="icon" href="../img/home/favicon.ico">
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/main.css">
+
 <style>
 html,body {
     background-color: white;
     overflow: hidden;
     height: 100%
 }
+#myPanoViewer{
+  height: 480;
+  width: 640;
+}
 </style>
 </head>
 <body >
-
-<div class="container">
-    <h1>House For Sale By Owner</h1>
-    <h1>11942 Mission Trace</h1>
-    <h3>San Antonio, TX 78230</h3>
-    <h3>(210) 870-6991</h3>
-</div>
 
 
     <div id="myPanoViewer" >
@@ -30,9 +24,7 @@ html,body {
 <!-- ===============================
     Scripts
  =============================== -->
-    <script src="../js/vendor/jquery-1.12.1.min.js"></script>
-    <script src="../js/plugins.js"></script>
-    <script src="../js/vendor/bootstrap.min.js"></script>
+
     <script src="../js/main.js"></script>
     <script type="text/javascript">
     // create a new viewer object:
