CSS update to house

--- a/house/house1.html
+++ b/house/house1.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-
 <style>
 html,body {
     background-color: white;
@@ -9,8 +8,9 @@ html,body {
     height: 100%
 }
 #myPanoViewer{
-  height: 480;
-  width: 640;
+    padding: 0px;
+    cursor: move;
+    height: 100%
 }
 </style>
 </head>
