--- a/house/house1.html
+++ b/house/house1.html
@@ -65,7 +65,7 @@ color:White;
           <a href="#">Front Door</a>
         </li>
         <li>
-          <a href="#">Dining Room</a>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house2_'});">Dining Room</a>
         </li>
         <li>
           <a href="#">Kitchen</a>
