Add viewer embed to menu options

--- a/house/house1.html
+++ b/house/house1.html
@@ -14,8 +14,8 @@ html,body {
 }
 #panel {
    position: absolute;
-   top: 0px;
-   left: 0px;
+   top: 8px;
+   left: 6px;
    background-color: whitesmoke;
 }
 #menu
@@ -62,7 +62,7 @@ color:White;
       <div id="panel">
       <ul id="menu" style="width: 175px; height: 300px; overflow: auto" class="hidden-xs">
         <li>
-          <a href="#">Front Door</a>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house1_',format: '14faces'});viewer.embed('myPanoViewer');">Front Door</a>
         </li>
         <li>
           <a href="#" onclick="viewer.setVars({pano: '../img/house/house2_',format: '14faces'});viewer.embed('myPanoViewer');">Dining Room</a>
