add autorotation to pano

--- a/house/house1.html
+++ b/house/house1.html
@@ -62,10 +62,10 @@ color:White;
       <div id="panel">
       <ul id="menu" style="width: 175px; height: 300px; overflow: auto" class="hidden-xs">
         <li>
-          <a href="#" onclick="viewer.setVars({pano: '../img/house/house1_',format: '14faces'});viewer.embed('myPanoViewer');">Front Door</a>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house1_',format: '14faces',autorotatespeed: 5});viewer.embed('myPanoViewer');">Front Door</a>
         </li>
         <li>
-          <a href="#" onclick="viewer.setVars({pano: '../img/house/house2_',format: '14faces'});viewer.embed('myPanoViewer');">Dining Room</a>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house2_',format: '14faces',autorotatespeed: 5,});viewer.embed('myPanoViewer');">Dining Room</a>
         </li>
         <li>
           <a href="#">Kitchen</a>
