Continue adding rooms to house page

--- a/house/house1.html
+++ b/house/house1.html
@@ -71,10 +71,13 @@ color:White;
           <a href="#">Kitchen</a>
         </li>
         <li>
-          <a href="#">Living Room</a>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house3_',format: '14faces',autorotatespeed: 5,autorotatedelay: 10});viewer.embed('myPanoViewer');">Living Room 1</a>
         </li>
-         <li>
-          <a href="#">Guest Bedroom</a>
+        <li>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house4_',format: '14faces',autorotatespeed: 5,autorotatedelay: 10});viewer.embed('myPanoViewer');">Living Room 2</a>
+        </li>
+        <li>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house5_',format: '14faces',autorotatespeed: 5,autorotatedelay: 10});viewer.embed('myPanoViewer');">Guest Bedroom</a>
         </li>
                 <li>
           <a href="#">Master Bedroom</a>
