Added More Rooms to House page

--- a/house/house1.html
+++ b/house/house1.html
@@ -68,7 +68,7 @@ color:White;
           <a href="#" onclick="viewer.setVars({pano: '../img/house/house2_',format: '14faces',autorotatespeed: 5,autorotatedelay: 10});viewer.embed('myPanoViewer');">Dining Room</a>
         </li>
         <li>
-          <a href="#">Kitchen</a>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house7_',format: '14faces',autorotatespeed: 5,autorotatedelay: 10});viewer.embed('myPanoViewer');">Kitchen</a>
         </li>
         <li>
           <a href="#" onclick="viewer.setVars({pano: '../img/house/house3_',format: '14faces',autorotatespeed: 5,autorotatedelay: 10});viewer.embed('myPanoViewer');">Living Room 1</a>
@@ -83,13 +83,13 @@ color:White;
           <a href="#">Master Bedroom</a>
         </li>
                 <li>
-          <a href="#">Courtyard</a>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house8_',format: '14faces',autorotatespeed: 5,autorotatedelay: 10});viewer.embed('myPanoViewer');">Courtyard</a>
         </li> 
                <li>
           <a href="#">Back Porch / Hot Tub</a>
         </li>
                 <li>
-          <a href="#">Breakfast</a>
+          <a href="#" onclick="viewer.setVars({pano: '../img/house/house6_',format: '14faces',autorotatespeed: 5,autorotatedelay: 10});viewer.embed('myPanoViewer');">Breakfast Room</a>
         </li>
                </ul>
     </div>  
