Add Dojo to Main Menu
Add Dojo to Main Menu

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                                 <li><a href="courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
                             </ul>
                         </li>
+                            <li>
+                                <a href="https://sites.google.com/site/coderdojojavascript/">Dojo</a>
+                            </li>
                              <li>
                                 <a href="about/about.html">About</a>
                             </li>
