--- a/about/about.html
+++ b/about/about.html
@@ -46,7 +46,9 @@
                             <li><a href="../courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
                         </ul>
                     </li>
-
+                    <li>
+                        <a href="https://sites.google.com/site/coderdojojavascript/">Dojo</a>
+                    </li>
                      <li>
                         <a href="#">About</a>
                     </li>
