update onblur function example

--- a/dojo/files/onblur.html
+++ b/dojo/files/onblur.html
@@ -12,9 +12,11 @@ function myBlurFunction() {
 
 Enter your name: <input type="text" id="name" onblur="myBlurFunction()">
 
-<p>When you leave the input field, a function is triggered to convert the input text to upper case.</p>
+<p>When you leave the input field, the myBlurFunction is triggered to convert the input text to upper case.</p>
 
 =================
+
+<br>
 
  Right-click => Inspect to view the code
 
