--- a/dojo/students/IsaiahCuyler/index.html
+++ b/dojo/students/IsaiahCuyler/index.html
@@ -11,7 +11,7 @@
 		<br>
 			<div style="text-align:center;background:white;font-size:24;font-family:Brush Script MT">
 			<br>
-			John Doe
+			Isaiah Cuyler
 			<br>
 			<br>
 			</div>
