--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             </ul>
                         </li>
                             <li>
-                                <a href="https://sites.google.com/site/coderdojojavascript/">Dojo</a>
+                                <a href="https://sites.google.com/site/coderdojojavascript/">CoderDojo</a>
                             </li>
                              <li>
                                 <a href="about/about.html">About</a>
