Added Krishna INDEX.HTML

--- a/dojo/students/KrishnaGurung/index.html
+++ b/dojo/students/KrishnaGurung/index.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 </head>
@@ -7,10 +6,12 @@
 	<a href="puppy.html">Puppy</a>
 
 	<h1 >Hello</h1>
-	<h2 >my name is</h2>
+	<h2 >my name is Krishna gurung</h2>
 			
-	<img src="person.png">			
-	<p>Student Name</p>
+	<img src="C:\Users\Guest01\Downloads/boy.png">			
+	<p> KRISHNA Gurung</p>
+
+<p>My name is Krishna Gurung and some of my hobbies are sports like chess and soccer. I go to a school called Basis and I am in 6th grade. </p>
 		
 </body>
 </html>
