Fix Krishna IMG

--- a/dojo/students/KrishnaGurung/index.html
+++ b/dojo/students/KrishnaGurung/index.html
@@ -8,7 +8,7 @@
 	<h1 >Hello</h1>
 	<h2 >my name is Krishna gurung</h2>
 			
-	<img src="C:\Users\Guest01\Downloads/boy.png">			
+	<img src="boy.png">			
 	<p> KRISHNA Gurung</p>
 
 <p>My name is Krishna Gurung and some of my hobbies are sports like chess and soccer. I go to a school called Basis and I am in 6th grade. </p>
