--- a/dojo/students/MykolasKevilus/index.html
+++ b/dojo/students/MykolasKevilus/index.html
@@ -1,16 +1,30 @@
-
 <html>
 <head>
+<link rel="icon" 
+      type="image/gif" 
+      href="images/54330619eb46.gif">
 </head>
 <body>
-	<a href="">Home</a>
+	<a href="index.html">Home</a>
 	<a href="puppy.html">Puppy</a>
 
-	<h1 >Hello</h1>
-	<h2 >my name is</h2>
+	<h1>Hello</h1>
+	<h2>my name is Myko</h2>
 			
-	<img src="person.png">			
-	<p>Student Name</p>
+	<img src="images/imgres.jpg">
+	<img src="images/tumblr_n88lugwECk1tquy17o1_500.gif">
+	<button id="myButton" class="float-left submit-button" >Alamo City Comic Con</button>
+
+<script type="text/javascript">
+    document.getElementById("myButton").onclick = function () {
+        location.href = "http://alamocitycomiccon.com/";
+        (function() {
+    var link = document.createElement('link');
+</script><!DOCTYPE html 
+      PUBLIC "-//W3C//DTD HTML 4.01//EN"
+      "http://www.w3.org/TR/html4/strict.dtd">
+			
+	<p>Myko</p>
 		
-</body>
-</html>
+
+</body></html>
