--- a/dojo/students/SydneyVaughn/index.html
+++ b/dojo/students/SydneyVaughn/index.html
@@ -1,16 +1,16 @@
-
 <html>
 <head>
 </head>
 <body>
-	<a href="">Home</a>
-	<a href="puppy.html">Puppy</a>
+ <a href="index.html">Home</a>
+ <a href="puppy.html">Puppy</a>
 
-	<h1 >Hello</h1>
-	<h2 >my name is</h2>
-			
-	<img src="person.png">			
-	<p>Student Name</p>
-		
+ <h1>Hello</h1>
+ <h2>my name is Sydney Vaughn.</h2>
+   
+ <img src="girl.png">   
+ <p>I enjoy playing golf,reading, and cooking.</p>
+  
+
 </body>
 </html>
