--- a/dojo/students/MykolasKevilus/puppy.html
+++ b/dojo/students/MykolasKevilus/puppy.html
@@ -1,14 +1,16 @@
 <html>
 	<head>
-		<title>Lost Puppy</title>
+		<title>Found Puppy</title>
 	</head>
 	<body>
-	<h1>Lost Puppy</h1>
-	<img id="puppyPicture" src="puppy1.jpg" height="500" width="500">
+	<a href="index.html" >Home</a>
+	<a href="puppy.html" >Puppy</a>
+	<h1>Found Puppy</h1>
+	<img id="puppyPicture" src="images/puppy1.jpg" height="500" width="500">
 	<br>
-	<img src="puppy1.jpg" height="50" width="50" onmouseover="setPuppy1();">
-	<img src="puppy2.jpg" height="50" width="50" onmouseover="setPuppy2();">
-	<p> My puppy is lost.  His name is Lucky. He was last seen near the Alamo last weekend.</p>
+	<img src="images/puppy1.jpg" height="50" width="50" onmouseover="setPuppy1();">
+	<img src="images/puppy2.jpg" height="50" width="50" onmouseover="setPuppy2();">
+	<p> My puppy is found.  His name is Lucky.</p>
 	<p>Please give me a call if you find him.</p>
 	<h2 onmouseover="this.style.color='red';">210-888-9999</h2>
 
@@ -16,11 +18,11 @@
 	var bigPicture = document.getElementById("puppyPicture");
 
 	function setPuppy1(){
-		bigPicture.src="puppy1.jpg";
+		bigPicture.src="images/puppy1.jpg";
 	}
 
 	function setPuppy2(){
-		bigPicture.src="puppy2.jpg";
+		bigPicture.src="images/puppy2.jpg";
 	}
 	</script>
 	</body>
