Add Class Exercise for Navigation

--- a/dojo/students/JohnDoe/index.html
+++ b/dojo/students/JohnDoe/index.html
@@ -3,14 +3,15 @@
 <head>
 </head>
 <body>
-	<a href="">Home</a>
+	<a href="index.html">Home</a>
 	<a href="puppy.html">Puppy</a>
+	<a href="mypage.html">Vote for Scooter</a>
 
 	<h1 >Hello</h1>
 	<h2 >my name is</h2>
 			
-	<img src="person.png">			
-	<p>Student Name</p>
+	<img src="boy.png">			
+	<p>John Doe</p>
 		
 </body>
 </html>
