--- a/dojo/students/JohnDoe/puppy.html
+++ b/dojo/students/JohnDoe/puppy.html
@@ -3,6 +3,9 @@
 		<title>Lost Puppy</title>
 	</head>
 	<body>
+	<a href="index.html">Home</a>
+	<a href="puppy.html">Puppy</a>
+	<a href="mypage.html">Vote for Scooter<a>
 	<h1>Lost Puppy</h1>
 	<img id="puppyPicture" src="puppy1.jpg" height="500" width="500">
 	<br>
