--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         // set parameters for the viewer:
         viewer.setVars({
-          pano: "img/home/sanJosePano_",
+          pano: "img/home/2_",
           format: "14faces",
           pan: 180,
           minpan: -180,
