--- a/dojo/students/JohnDoe/mypage.html
+++ b/dojo/students/JohnDoe/mypage.html
@@ -12,5 +12,9 @@
 	<img src="scooter.jpg" width="400px">			
 	<p>Scooter would make a <i>DogGone Good</i> president...</p>
 	</center>	
+
+	<audio autoplay>
+		<source src="anthem.mp3" type="audio/mpeg">
+	</audio>
 </body>
 </html>
